# lemonnet

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  LemonNet.Example.sln  LemonNet.sln  NuGet.config  README.md  README_VS.md  build-vs.bat  build.bat  build.sh
.claude/: settings.local.json
.github/workflows/: publish-nuget.yml
docs/: API-Reference.md  API.md  BUILD-AND-PACKAGING.md  DEVELOPMENT.md  Overview.md  Performance-Benchmarks.md  README.md
examples/LemonNet.Benchmark/: LemonNet.Benchmark.csproj  MaxFlowBenchmarks.cs  Program.cs
examples/LemonNet.Example/: LemonNet.Example.csproj  Program.cs  README.md
examples/LemonNet.Example.NuGet/: LemonNet.Example.NuGet.csproj  Program.cs
src/LemonNet/: ArcMap.cs  ArcMapDouble.cs  BellmanFord.cs  Dijkstra.cs  EdgeFlow.cs  EdmondsKarp.cs  LemonDigraph.cs  LemonNet.csproj  LemonNet.targets  MaxFlowResult.cs  NodeMapDouble.cs  Path.cs  Preflow.cs  ShortestPathResult.cs
src/LemonNet.Native/: LemonWrapper.Native.vcxproj  build-linux.bat  lemon_wrapper.cpp  lemon_wrapper.h  nul
src/LemonNet.Native/lemon-1.3.1/: .hg_archival.txt  .hgignore  .hgtags  AUTHORS  CMakeLists.txt  INSTALL  LICENSE  NEWS  README
src/LemonNet.Native/lemon-1.3.1/cmake/: FindCOIN.cmake  FindGLPK.cmake  FindGhostscript.cmake  FindILOG.cmake  (+4 more)
src/LemonNet/Internal/: MarshalHelper.cs
tests/LemonNet.Tests/: ArcMapTests.cs  BellmanFordTests.cs  DijkstraTests.cs  EdmondsKarpTests.cs  LemonDigraphTests.cs  LemonNet.Tests.csproj  ParallelArcTests.cs  PreflowTests.cs  TestGraphs.cs
tests/LemonNet.Tests/Properties/: launchSettings.json
(+1729 files in other folders)
